added extra data into tables

--- a/templates/reviews/show.html
+++ b/templates/reviews/show.html
@@ -2,10 +2,15 @@
 
 {% block content %}
 
-<p>Title: {{review.title}}</p>
-<p>Content: {{review.content}}</p>
-<p>Attraction: {{review.attraction.name}}</p>
-<p>Entry Fee: {{review.attraction.entry_fee}}</p>
+<div class="page-content">
+    <br>
+    <p><b>Title:</b> {{review.title}}</p>
+    <p><b>Content:</b> {{review.content}}</p>
+    <p><b>Attraction:</b> {{review.attraction.name}}</p>
+    <p><b>Entry Fee:</b> {{review.attraction.entry_fee}}</p>
+    <br>
+    <br>
+</div>
 
 
 
