--- a/templates/attractions/new.html
+++ b/templates/attractions/new.html
@@ -25,8 +25,8 @@
         <div class="input-container">
             <label for="entry_fee">Entry Fee:</label>
             <select name="entry_fee" id="entry_fee">
-                <option value="true">True</option>
-                <option value="false">False</option>
+                <option value="true">Yes</option>
+                <option value="false">No</option>
             </select>
         </div>
         <br>
