--- a/templates/countries/edit.html
+++ b/templates/countries/edit.html
@@ -13,15 +13,15 @@
         <div class="input-container">
             <label for="visited">Visited: </label>
             <select name="visited" id="visited">
-                <option value="true" {% if country.visited == True %} selected="selected" {% endif %}>True</option>
-                <option value="false" {% if country.visited == False %} selected="selected" {% endif %}>False</option>
+                <option value="true" {% if country.visited == True %} selected="selected" {% endif %}>Yes</option>
+                <option value="false" {% if country.visited == False %} selected="selected" {% endif %}>No</option>
             </select>
         </div>
         <div class="input-container">
             <label for="wishlist">Wishlist: </label>
             <select name="wishlist" id="wishlist">
-                <option value="true" {% if country.wishlist == True %} selected="selected" {% endif %}>True</option>
-                <option value="false" {% if country.wishlist == False %} selected="selected" {% endif %}>False</option>
+                <option value="true" {% if country.wishlist == True %} selected="selected" {% endif %}>Yes</option>
+                <option value="false" {% if country.wishlist == False %} selected="selected" {% endif %}>No</option>
             </select>
         </div>
         <br>
