--- a/templates/countries/show.html
+++ b/templates/countries/show.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="page-content">
     <h3>Cities in {{country.name}}:</h3>
-    <ul>
+    <ul class="city-list">
         {% for city in cities %}
         <li><a class="link" href="/cities/{{city.id}}">{{city.name}}</a></li>
         {% endfor %}
