--- a/templates/reviews/show.html
+++ b/templates/reviews/show.html
@@ -7,7 +7,11 @@
     <p><b>Title:</b> {{review.title}}</p>
     <p><b>Content:</b> {{review.content}}</p>
     <p><b>Attraction:</b> {{review.attraction.name}}</p>
-    <p><b>Entry Fee:</b> {{review.attraction.entry_fee}}</p>
+    {% if review.attraction.entry_fee == True %}
+        <p><b>Entry Fee:</b> Yes</p>
+    {% else %}
+        <p><b>Entry Fee:</b> No</p>
+    {% endif %}
     <br>
     <br>
 </div>
