--- a/templates/attractions/edit.html
+++ b/templates/attractions/edit.html
@@ -25,8 +25,8 @@
         <div class="input-container">
             <label for="entry_fee">Entry Fee:</label>
             <select name="entry_fee" id="entry_fee">
-                <option value="true" {% if attraction.entry_fee == True %} selected="selected" {% endif %}>True</option>
-                <option value="false" {% if attraction.entry_fee == False %} selected="selected" {% endif %}>False</option>
+                <option value="true" {% if attraction.entry_fee == True %} selected="selected" {% endif %}>Yes</option>
+                <option value="false" {% if attraction.entry_fee == False %} selected="selected" {% endif %}>No</option>
             </select>
         </div>
         <br>
