--- a/templates/attractions/show_free.html
+++ b/templates/attractions/show_free.html
@@ -19,7 +19,11 @@
                 <td><a class="link" href="/attractions/{{attraction.id}}">{{attraction.name}}</a></td>
                 <td>{{ attraction.category }}</td>
                 <td>{{ attraction.name }}</td>
-                <td>{{ attraction.entry_fee }}</td>
+                {% if attraction.entry_fee == True %}
+                    <td><p>Yes</p></td>
+                {% else %}
+                    <td><p>No</p></td>
+                {% endif %}
             </tr>
             {% endfor %}
         </tbody>
