--- a/templates/cities/new.html
+++ b/templates/cities/new.html
@@ -21,15 +21,15 @@
         <div class="input-container">
             <label for="visited">Visited: </label>
             <select name="visited" id="visited">
-                <option value="true">True</option>
-                <option value="false">False</option>
+                <option value="true">Yes</option>
+                <option value="false">No</option>
             </select>
         </div>
         <div class="input-container">
             <label for="wishlist">Wishlist: </label>
             <select name="wishlist" id="wishlist">
-                <option value="true">True</option>
-                <option value="false">False</option>
+                <option value="true">Yes</option>
+                <option value="false">No</option>
             </select>
         </div>
         <br>
