--- a/templates/cities/show.html
+++ b/templates/cities/show.html
@@ -17,7 +17,11 @@
             <tr>
                 <td><a class="link" href="/attractions/{{attraction.id}}">{{attraction.name}}</a></td>
                 <td>{{ attraction.category }}</td>
-                <td>{{ attraction.entry_fee }}</td>
+                {% if attraction.entry_fee == True %}
+                    <td><p>Yes</p></td>
+                {% else %}
+                    <td><p>No</p></td>
+                {% endif %}
             </tr>
             {% endfor %}
         </tbody>
