--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 <div class="container">
     <div class="home-image">
         <div class="thumb">
-            <img src="/static/css/countries.JPG" alt="View of the alps from a plane" style="width:200px;height:200px;">
+            <img src="/static/images/countries.JPG" alt="View of the alps from a plane" style="width:200px;height:200px;">
         </div>
         <div class="content">
             <p><a href="/countries">Countries</a></p>
@@ -17,7 +17,7 @@
     </div>
     <div class="home-image">
         <div class="thumb">
-            <img src="/static/css/cities.JPG" alt="Image of Venice" style="width:200px;height:200px;">
+            <img src="/static/images/cities.JPG" alt="Image of Venice" style="width:200px;height:200px;">
         </div>
         <div class="content">
             <p><a href="/cities">Cities</a></p>
@@ -25,7 +25,7 @@
     </div>
     <div class="home-image">
         <div class="thumb">
-            <img src="/static/css/attraction.JPG" alt="Image of Trevi Fountain in Rome" style="width:200px;height:200px;">
+            <img src="/static/images/attraction.JPG" alt="Image of Trevi Fountain in Rome" style="width:200px;height:200px;">
         </div>
         <div class="content">
             <p><a href="/attractions">Things To Do</a></p>
