media query & changed font

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="/static/css/form.css">
     <link rel="stylesheet" href="/static/css/grid.css">
     <link rel="stylesheet" href="/static/css/headers.css">
+    <link rel="stylesheet" href="/static/css/tablet.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com"> 
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
