--- a/templates/reviews/index.html
+++ b/templates/reviews/index.html
@@ -17,7 +17,7 @@
       <a href="/review/wishlist">Places on My Wishlist</a>
     </div>
     <div class="item3">
-      <img src="/static/images/Fernweh.PNG" alt="Fernweh dictionary description" style="width:100%;height:300px">
+      <img src="/static/images/Fernweh.PNG" alt="Fernweh dictionary description" style="width:auto;height:250px">
     </div>
     <div class="item4">
       <h1>Reviews & Notes</h1>
