--- a/templates/attractions/edit.html
+++ b/templates/attractions/edit.html
@@ -12,7 +12,7 @@
         </div>
         <div class="input-container">
             <label for="category">Category:</label>
-            <input type="text" id="category" value="{{attraction.category}}" name="category" required>
+            <input class="input-field" type="text" id="category" value="{{attraction.category}}" name="category" required>
         </div>
         <div class="input-container">
             <label for='city'>City:</label>
