--- a/templates/reviews/wishlist.html
+++ b/templates/reviews/wishlist.html
@@ -1,21 +1,22 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>My Wishlist:</h1>
-<h3>Countries</h3>
+<div class="page-content">
+    <h1>My Wishlist:</h1>
+    <h3>Countries</h3>
 
     {% for country in countries %}
         <ul>
             <li>{{country.name}}</li>
         </ul>
     {% endfor %}
-<br>
-<br>
-<h3>Cities</h3>
+    <br>
+    <br>
+    <h3>Cities</h3>
     {% for city in cities %}
         <ul>
             <li>{{city.name}}</li>
         </ul>
     {% endfor %}
- 
+</div>
 {% endblock %}
