--- a/templates/reviews/edit.html
+++ b/templates/reviews/edit.html
@@ -13,7 +13,7 @@
         </div>
         <div class="input-container">
             <label for="content">Content:</label>
-            <textarea name="content" id="content" value="{{review.content}}" placeholder="Write content here..." cols="30" rows="50"></textarea>
+            <textarea name="content" id="content" value="{{review.content}}" placeholder="{{review.content}}" cols="30" rows="50"></textarea>
         </div>
         <div class="input-container">
             <label for='attraction'>Attraction:</label>
