--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,6 +1,6 @@
 body {
     margin: 0% ;
-    font-family: 'Nunito',  Helvetica, Arial, sans-serif;
+    font-family: 'Nunito', sans-serif;
 }
 
 .page-content {
