--- a/templates/attractions/search.html
+++ b/templates/attractions/search.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="page-content">
     <h3>Search for a Type of Attraction</h3>
-    <p>Eg. 'museum', 'historical sight', 'sports'</p>
+    <p>Eg. 'museum', 'historical site', 'sports'</p>
 
 
     <form action="/attractions/search_results" method="post">
