--- a/templates/attractions/edit.html
+++ b/templates/attractions/edit.html
@@ -5,7 +5,7 @@
     <p>Please complete the form to update this attraction.</p>
 
 
-    <form action="/attractions/{{attraction.id}}" method="post">
+    <form class="form" action="/attractions/{{attraction.id}}" method="post">
         <div class="input-container">
             <label for="name">Name:</label>
             <input class="input-field" type="text" id="name" value="{{attraction.name}}" name="name" required>
@@ -33,8 +33,6 @@
     
         <button class="button" type="submit">Edit Attraction</button>
     </form>
-    <br>
-    <br>
 </div>
 
 {% endblock %}
