--- a/templates/attractions/new.html
+++ b/templates/attractions/new.html
@@ -5,7 +5,7 @@
     <p>Please complete the form to add a new attraction to your available things to do list. You will need to select a city from the dropdown list. If you can't see the city you are looking for then you will need to add a new city. Click on the <b>Cities</b> link at the top of the page.</p>
 
 
-    <form action="/attractions" method="post">
+    <form class="form" action="/attractions" method="post">
         <div class="input-container">
             <label for="name">Name: </label>
             <input class="input-field" type="text" id="name" name="name" placeholder="Name of Attraction" required>
@@ -33,8 +33,6 @@
     
         <button class="button" type="submit">Add Attraction</button>
     </form>
-    <br>
-    <br>
 </div>
 
 {% endblock %}
