--- a/templates/attractions/search.html
+++ b/templates/attractions/search.html
@@ -5,7 +5,7 @@
     <p>Eg. 'museum', 'historical site', 'sports'</p>
 
 
-    <form action="/attractions/search_results" method="post">
+    <form class="form" action="/attractions/search_results" method="post">
         <div class="input-container">
             <label for="search">Input Your Search Here:</label>
             <input class="input-field" type="text" id="search" name="search" placeholder="Search" required>
@@ -14,7 +14,5 @@
 
         <button class="button" type="submit">Search</button>
     </form>
-    <br>
-    <br>
 </div>
 {% endblock %}
