--- a/templates/cities/search.html
+++ b/templates/cities/search.html
@@ -3,7 +3,7 @@
 <div class="page-content">
     <h3>Search for a City</h3>
 
-    <form action="/cities/search_results" method="post">
+    <form class="form" action="/cities/search_results" method="post">
         <div class="input-container">
             <label for="search">Input Your Search Here:</label>
             <input class="input-field" type="text" id="search" name="search" placeholder="Search" required>
@@ -12,8 +12,6 @@
 
         <button class="button" type="submit">Search</button>
     </form>
-    <br>
-    <br>
 </div>
 
 {% endblock %}
