--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,7 @@
         {% endblock %}
     </main>
     <footer>
-        <p>The Travel List</p>
+        <p>© The Travel List</p>
     </footer>
     
 </body>
