--- a/templates/reviews/index.html
+++ b/templates/reviews/index.html
@@ -21,14 +21,14 @@
     </div>
     <div class="item4">
       <h1>Reviews & Notes</h1>
-      <a href="/reviews/new"><button class="button">Add Review</button></a>
+      <a href="/reviews/new"><button class="button">Add Entry</button></a>
       <br>
       <hr>
       <br>
       {% for review in reviews %}
       <a href="/reviews/{{review.id}}"> {{review.title}}</a>
       <p>{{review.content}}</p>
-      <p>Where: {{review.attraction.name}}</p>
+      <p>{{review.attraction.name}}</p>
       <div class="button-container">
         <a href="reviews/{{review.id}}/edit"><button class="button-journal">Edit</button></a>
         <form action="/review/{{review.id}}/delete" method="POST"><button class="button-journal">Delete</button></form>
