--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,6 +1,7 @@
 .welcome {
     text-align: center;
     font-size: 20px;
+    padding: 40px;
 }
 
 .container {
@@ -42,6 +43,7 @@
 .search-links {
     text-align: center;
     font-size: 20px;
+    padding: 40px;
 }
 
 .search-links ul {
