--- a/templates/reviews/new.html
+++ b/templates/reviews/new.html
@@ -7,7 +7,7 @@
     <p>You will need to select an attraction from the dropdown list. If you can't see the attraction you are looking for then you will need to add a new attraction. Click on the <b>Things To Do</b> link at the top of the page.</p>
 
 
-    <form action="/reviews" method="post">
+    <form class="form" action="/reviews" method="post">
         <div class="input-container">
             <label for="title">Title:</label>
             <input class="input-field" type="text" id="title" name="title" placeholder="Title" required>
@@ -29,8 +29,6 @@
     
         <button class="button" type="submit">Add Entry</button>
     </form>
-    <br>
-    <br>
 </div>
 
 {% endblock %}
